# keystone

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Justfile  Makefile  README.md  deny.toml  example.toml  flake.nix  renovate.json
.github/workflows/: rust.yml
core/: Cargo.toml  build.rs  keystone.sqlite  regen-tz.rs
core/schema/: Cargo.toml  boot.capnp  build.rs  cap_std.capnp  cap_std_capnp.rs  database.capnp  document.capnp  hello_worldd.capnp  http.capnp  keystone.capnp  logger.capnp  module.capnp  modulespawn.capnp  posix.capnp  posix_module.capnp  posix_spawn.capnp  scheduler.capnp  spawn.capnp  sqlite.capnp  storage.capnp  sturdyref.capnp  toml.capnp  tz.capnp  unix_process.capnp  wasm.capnp
core/schema/std/: buffer.capnp  buffer_capnp.rs  byte_stream.capnp  stream.capnp  sturdyref.capnp  toml.capnp
core/src/: binary_embed.rs  buffer_allocator.rs  byte_stream.rs  cap_replacement.rs  cap_std.rs  cap_std_capnproto.rs  cell.rs  config.rs  couchdb.rs  database.rs  dump  host.rs  keystone.rs  lib.rs  main.rs  module.rs  module_spawn.rs  node.rs  posix.rs  posix_module.rs  posix_process.rs  posix_spawn.rs  process.rs  proxy.rs  scheduler.rs  service.rs  spawn.rs  sqlite.rs  sturdyref.rs  util.rs
core/src/http/: domain.rs  https.rs  mod.rs  path.rs  response.rs
core/tests/: complex_config_test.rs  config_test.rs  hello_world_test.rs  http_test.rs  stateful_test.rs
core/tests/harness/: mod.rs
examples/: example.linux.toml  example.windows.toml
examples/complex-config/: Cargo.toml  main.rs
examples/complex-config/tests/: init.rs
examples/hello-world/: Cargo.toml  build.rs  hello_world.capnp  main.rs  out.txt
examples/hello-world/tests/: init.rs  proxy.rs
examples/indirect-world/: Cargo.toml  build.rs  indirect_world.capnp  indirect_world.rs  lib.rs  main.rs
examples/indirect-world/tests/: init.rs
examples/scheduler-usage/: Cargo.toml  build.rs  lib.rs  main.rs  scheduler_usage.capnp  scheduler_usage.rs
examples/scheduler-usage/tests/: init.rs
examples/sqlite-usage/: Cargo.toml  build.rs  main.rs  sqlite_usage.capnp
examples/sqlite-usage/tests/: init.rs
examples/stateful/: Cargo.toml  lib.rs  main.rs  stateful.rs
examples/stateful/tests/: init.rs
modules/complex-config/: Cargo.toml  build.rs  complex_config.rs  main.rs
modules/config-test/: Cargo.toml  build.rs  capnproto.rs  config_test.capnp  config_test.rs  main.rs
modules/hello-world/: Cargo.toml  build.rs  hello_world.capnp  hello_world.rs  hello_world_capnp.rs  keystone.schema  lib.rs  main.rs
modules/hello-world/tests/: proxy.rs
modules/hello_world/: Cargo.toml  client.rs  hello_world_impl.rs  main.rs  server.rs
modules/http_test/: Cargo.toml
modules/http_test/src/: main.rs
modules/indirect-world/: Cargo.toml  build.rs  indirect_world.capnp  indirect_world.rs  keystone.schema  lib.rs  main.rs
modules/lua-module/: Cargo.toml  build.rs  lib.rs  lua_module.capnp  main.rs
modules/lua-module/src/: lib.rs  test.lua
modules/lua-process/: Cargo.toml  client.rs  hello_world.capnp  server.rs
modules/sqlite-ks/: Cargo.toml  sqlite.capnp
modules/sqlite-ks/src/: lib.rs  main.rs
modules/stateful/: Cargo.toml  build.rs  main.rs  stateful.capnp  stateful.rs
modules/test/: Cargo.toml
modules/test/src/: main.rs
patches/: http-over-capnp.patch
util/: Cargo.toml
util/src/: lib.rs
