[workspace]
members = [
  "core",
  "build",
  "modules/hello-world",
  "modules/indirect-world",
  "modules/stateful",
  "modules/complex-config",
  "util",
]
resolver = "2"
default-members = ["core"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.77.0"
license = "Apache-2.0"
homepage = "https://github.com/Fundament-Software/keystone"
repository = "https://github.com/Fundament-Software/keystone/"
documentation = "https://docs.rs/keystone/"
readme = "README.md"

[workspace.dependencies]
cap-std = "2.0.0"
color-eyre = "0.6"
eyre = "0.6"
rand = { version = "0.8.5", features = ["std_rng"] }
tracing-subscriber = { version = "0.3.18", features = ["time"] }
tracing = "0.1.40"
tokio = { version = "1.18", features = [
  "net",
  "rt",
  "macros",
  "io-std",
  "time",
  "tracing",
  "signal",
  "process",
] }
tokio-util = { version = "0.7.4", features = ["compat"] }
async-backtrace = "0.2.7"
futures-util = "0.3"
capstone = { git = "https://github.com/Fundament-Software/capstone-rs" }
capstone-futures = { git = "https://github.com/Fundament-Software/capstone-rs" }
capstone-import = { git = "https://github.com/Fundament-Software/capstone-rs" }
capstone-rpc = { git = "https://github.com/Fundament-Software/capstone-rs" }
capstone-macros = { git = "https://github.com/Fundament-Software/capstone-rs" }
capstone-gen = { git = "https://github.com/Fundament-Software/capstone-rs" }
async-byte-channel = { git = "https://github.com/Fundament-Software/capstone-rs" }
uuid = "1.*"
rusqlite = { version = "0.31", features = [
  "bundled",
  "modern_sqlite",
  "i128_blob",
  "uuid",
  "array",
] }
keystone-build = { path = "build" }
keystone-util = { path = "util" }
keystone = { path = "core" }
hello-world = { path = "modules/hello-world" }
indirect-world = { path = "modules/indirect-world" }
stateful = { path = "modules/stateful" }
complex-config = { path = "modules/complex-config" }
tempfile = "3"
mlua = { version = "0.9.9", features = ["lua54", "vendored", "macros", "async"] }

[patch."https://github.com/Fundament-Software/capstone-rs"]
capstone = { path = "../../c/capstone-rs/capnp" }
capstone-futures = { path = "../../c/capstone-rs/capnp-futures" }
capstone-import = { path = "../../c/capstone-rs/capnp-import" }
capstone-rpc = { path = "../../c/capstone-rs/capnp-rpc" }
capstone-macros = { path = "../../c/capstone-rs/capnp-macros" }
capstone-gen = { path = "../../c/capstone-rs/capnpc" }