[workspace]
members = [
  "core",
  "build",
  "examples/hello-world",
  "examples/indirect-world",
  "examples/stateful",
  "examples/complex-config",
  "examples/sqlite-usage",
  "examples/scheduler-usage",
]
resolver = "2"
default-members = ["core"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.86.0"
license = "Apache-2.0"
homepage = "https://github.com/Fundament-Software/keystone"
repository = "https://github.com/Fundament-Software/keystone/"
documentation = "https://docs.rs/keystone/"
readme = "README.md"

[workspace.dependencies]
color-eyre = "0.6"
eyre = "0.6"
rand = { version = "0.8.5", features = ["std_rng"] }
tracing-subscriber = { version = "0.3.18", features = ["time", "env-filter"] }
tracing = "0.1.40"
tokio = { version = "1.40", features = [
  "net",
  "rt",
  "macros",
  "io-std",
  "time",
  "tracing",
  "signal",
  "process",
] }
tokio-util = { version = "0.7.11", features = ["compat"] }
async-backtrace = "0.2.7"
futures-util = "0.3"
capstone = { git = "https://github.com/Fundament-Software/capstone-rs" }
capstone-futures = { git = "https://github.com/Fundament-Software/capstone-rs" }
capstone-rpc = { git = "https://github.com/Fundament-Software/capstone-rs" }
capstone-macros = { git = "https://github.com/Fundament-Software/capstone-rs" }
capstone-gen = { git = "https://github.com/Fundament-Software/capstone-rs" }
async-byte-channel = { git = "https://github.com/Fundament-Software/capstone-rs" }
uuid = "1.*"
rusqlite = { version = "0.32", features = [
  "bundled",
  "modern_sqlite",
  "i128_blob",
  "uuid",
  "array",
] }
keystone-build = { path = "build" }
keystone = { path = "core" }
hello-world = { path = "examples/hello-world" }
indirect-world = { path = "examples/indirect-world" }
stateful = { path = "examples/stateful" }
complex-config = { path = "examples/complex-config" }
tempfile = "3"
test-binary = "3.0"
chrono = { version = "0.4", default-features = false, features = [
  "std",
  "alloc",
  "clock",
] }
atomic-take = "1.1.0"
