[package]
name = "keystone"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors = ["Erik McClure <erikm@fundament.software>"]
description = """
Core framework for managing internal company infrastructure using couchdb and capability based security.
"""
homepage.workspace = true
repository = "https://github.com/Fundament-Software/keystone/tree/main/core"
readme.workspace = true
keywords = [
  "backend",
  "infrastructure",
  "management",
  "enterprise",
  "distributed",
]
license.workspace = true
links = "keystone"

[lib]
path = "src/lib.rs"
doctest = false

[[bin]]
name = "keystone"
path = "src/main.rs"

[dependencies]
bytes = "1.4.0"
cap-std.workspace = true
cap-tempfile = "2.0.0"
cap-directories = "2.0.0"
caplog = { git = "https://github.com/Fundament-Software/caplog" }
capstone.workspace = true
capstone-futures.workspace = true
capstone-rpc.workspace = true
capstone-macros.workspace = true
color-eyre.workspace = true
eyre.workspace = true
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
hyper-tls = "0.6"
serde = { version = "1.0", features = ["derive"] }
tokio.workspace = true
tokio-util.workspace = true
url = "2.3.1"
clap = { version = "4.5.4", features = ["derive"] }
tracing-subscriber.workspace = true
tracing.workspace = true
time = "0.3.34"
toml = "0.8.12"
futures-util.workspace = true
rusqlite.workspace = true
binfarce = "0.2.1"
thiserror = "1.0.61"
wasmparser = { version = "0.207.0", default-features = false, optional = true }
append-only-vec = "0.1.5"
rand.workspace = true
atomic-take = "1.1.0"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.139"

[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
version = "0.52"
features = ["Win32_Foundation"]

[dev-dependencies]
predicates = "2.1"
assert_fs = "1.0"
console-subscriber = "0.2.0"
tempfile.workspace = true
serde_json = "1.0"
keystone-util.workspace = true
hello-world.workspace = true
indirect-world.workspace = true
stateful.workspace = true
complex-config.workspace = true

[build-dependencies]
capstone-gen.workspace = true
tempfile.workspace = true
eyre.workspace = true
keystone-build.workspace = true
wax = "0.6.0"

[features]
default = ["wasm"]
wasm = ["wasmparser"]
