[package]
name = "keystone"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors = ["Erik McClure <erikm@fundament.software>"]
description = """
Core framework for managing internal company infrastructure using couchdb and capability based security.
"""
homepage.workspace = true
repository = "https://github.com/Fundament-Software/keystone/tree/main/core"
readme.workspace = true
keywords = [
  "backend",
  "infrastructure",
  "management",
  "enterprise",
  "distributed",
]
license.workspace = true
links = "keystone"

[lib]
path = "src/lib.rs"
doctest = false

[[bin]]
name = "keystone"
path = "src/main.rs"
required-features = ["binary-deps"]

[dependencies]
bytes = "1.7"
cap-std = "3.2"
cap-tempfile = "3.2"
cap-directories = "3.2"
caplog = { git = "https://github.com/Fundament-Software/caplog" }
capstone.workspace = true
capstone-futures.workspace = true
capstone-rpc.workspace = true
capstone-macros.workspace = true
capstone-gen.workspace = true
color-eyre.workspace = true
eyre.workspace = true
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
hyper-tls = "0.6"
serde = { version = "1.0", features = ["derive"] }
tokio.workspace = true
tokio-util.workspace = true
url = "2.5"
tracing-subscriber.workspace = true
tracing.workspace = true
time = "0.3"
toml = "0.8"
futures-util.workspace = true
rusqlite.workspace = true
binfarce = "0.2.1"
tempfile.workspace = true
thiserror = "1.0.61"
wasmparser = { version = "0.207.0", default-features = false, optional = true }
rand.workspace = true
atomic-take.workspace = true
num_enum = "0.7.3"
append-only-vec = "0.1.5"
async-byte-channel.workspace = true
clap = { version = "4.5", features = ["derive"], optional = true }
ratatui = { version = "0.29.0", optional = true }
chrono.workspace = true
chrono-tz = "0.10"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
version = "0.59"
features = ["Win32_Foundation"]

[dev-dependencies]
predicates = "3.1"
assert_fs = "1.1"
serde_json = "1.0"

[build-dependencies]
capstone-gen.workspace = true
tempfile.workspace = true
eyre.workspace = true
keystone-build.workspace = true
chrono-tz = "0.10"
convert_case = "0.6"
wax = "0.6.0"

[features]
default = ["wasm"]
wasm = ["wasmparser"]
testing = []
binary-deps = ["ratatui", "clap"]
