[package]
name = "keystone-schema"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors = ["Erik McClure <erikm@fundament.software>"]
description = """
Project containing shared keystone schema files
"""
homepage.workspace = true
repository = "https://github.com/Fundament-Software/keystone/tree/main/core/schema"
readme.workspace = true
license.workspace = true
links = "keystone"

[lib]
doctest = false
path = "lib.rs"
