[package]
name = "hello-world"
edition.workspace = true
rust-version.workspace = true
version = "0.1.0"
authors = [
  "Sonata",
  "Erik McClure <erikm@fundament.software>",
  "Original code: Mostafa Sedaghat Joo <mostafa.sedaghat@gmail.com>",
]
homepage.workspace = true
license.workspace = true
links = "hello_world"

[features]
tracing = []

[lib]
doctest = false
path = "lib.rs"

[[bin]]
name = "hello-world-module"
path = "main.rs"

[dependencies]
capstone.workspace = true
capstone-futures.workspace = true
capstone-rpc.workspace = true
capstone-macros.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
keystone.workspace = true

[dev-dependencies]
eyre.workspace = true
test-binary.workspace = true

[build-dependencies]
capstone-gen.workspace = true
tempfile.workspace = true
eyre.workspace = true
keystone-build.workspace = true
