[package]
name = "scheduler-usage"
edition.workspace = true
rust-version.workspace = true
version = "0.1.0"
authors = ["Erik McClure <erikm@fundament.software>"]
homepage.workspace = true
license.workspace = true
links = "scheduler_usage"

[features]
default = []
tracing = []

[lib]
doctest = false
path = "lib.rs"

[[bin]]
name = "scheduler-usage-module"
path = "main.rs"

[dependencies]
capstone-macros.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
keystone.workspace = true
chrono.workspace = true
atomic-take.workspace = true

[dev-dependencies]
eyre.workspace = true
tempfile.workspace = true
async-byte-channel.workspace = true
keystone = { path = "../../core", features = ["testing"] }

[build-dependencies]
keystone-build.workspace = true
