[package]
name = "stateful"
edition.workspace = true
rust-version.workspace = true
version = "0.1.0"
authors = ["Erik McClure <erikm@fundament.software>"]
homepage.workspace = true
license.workspace = true
links = "stateful"

[features]
tracing = []

[lib]
doctest = false
path = "lib.rs"

[[bin]]
name = "stateful-module"
path = "main.rs"

[dependencies]
capstone-macros.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
keystone.workspace = true

[build-dependencies]
keystone-build.workspace = true

[dev-dependencies]
eyre.workspace = true
tempfile.workspace = true
toml = "0.9"
