[package]
name = "keystone-hello-world-module"

version = "0.0.0"
authors = [ "Sonata", "Original code: Mostafa Sedaghat Joo <mostafa.sedaghat@gmail.com>"  ]
edition = "2021"

build = "build.rs"

[[bin]]
name = "keystone-hello-world-module"
path = "main.rs"

[build-dependencies]
capnpc = "0.18.0"

[dependencies]
capnp = "0.18.0"
capnp-rpc = "0.18.0" 
futures = "0.3.0"
tokio = { version = "1.0.0", features = ["net", "rt", "macros", "io-std", "time"]}
tokio-util = { version = "0.7.4", features = ["compat"] }
env_logger = "0.10.0"
log = "0.4.20"
