[package]
name = "indirect-world-module"
edition.workspace = true
rust-version.workspace = true
version = "0.1.0"
authors = ["Erik McClure <erikm@fundament.software>"]
homepage.workspace = true
license.workspace = true

[[bin]]
name = "indirect-world-module"
path = "main.rs"

[dependencies]
capstone.workspace = true
capstone-futures.workspace = true
capstone-import.workspace = true
capstone-rpc.workspace = true
capstone-macros.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

[build-dependencies]
capstone-gen.workspace = true
capstone-import.workspace = true
tempfile = "3"
eyre.workspace = true
