[package]
name = "lua-module"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

#[lib]
#crate-type = ["cdylib"]
[lib]
doctest = false
path = "lib.rs"

[[bin]]
name = "lua-module"
path = "main.rs"


[dependencies]
color-eyre.workspace = true
eyre.workspace = true
cap-std.workspace = true
tokio.workspace = true
capstone.workspace = true
capstone-rpc.workspace = true
capstone-macros.workspace = true
async-backtrace.workspace = true
mlua.workspace = true
lua-src = "547.0.0"
keystone = { path = "../../core" }
tempfile.workspace = true
keystone-util.workspace = true
async-byte-channel.workspace = true
tracing.workspace = true
toml = "0.8.12"
keystone-build.workspace = true
futures = "0.3.30"

[build-dependencies]
capstone-gen.workspace = true
tempfile.workspace = true
eyre.workspace = true
keystone-build.workspace = true