[package]
name = "lua-hello-world"
version = "0.0.0"
authors = [ "Sonata"  ]
edition = "2021"

build = "build.rs"

[[bin]]
name = "lua-hello-world"
path = "main.rs"

[build-dependencies]
capnpc = "0.18.0"

[dependencies]
capnp = "0.18.0"
capnp-rpc = "0.18.0" 
futures = "0.3.0"
tokio = { version = "1.0.0", features = ["full"]}
tokio-util = { version = "0.7.4", features = ["compat"] }
mlua = { version = "0.9.8", features = ["lua53", "vendored", "async"] }
color-eyre.workspace = true
eyre.workspace = true
