[package]
name = "stateful-module"
edition.workspace = true
rust-version.workspace = true
version = "0.1.0"
authors = ["Erik McClure <erikm@fundament.software>"]
homepage.workspace = true
license.workspace = true
links = "stateful_module"

[[bin]]
name = "stateful-module"
path = "main.rs"

[features]
tracing = []
default = ["tracing"]

[dependencies]
capstone.workspace = true
capstone-futures.workspace = true
capstone-import.workspace = true
capstone-rpc.workspace = true
capstone-macros.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
keystone-schema.workspace = true

[build-dependencies]
capstone-gen.workspace = true
capstone-import.workspace = true
tempfile.workspace = true
eyre.workspace = true
keystone-build.workspace = true

[dev-dependencies]
keystone = { path = "../../core" }
eyre.workspace = true
tempfile.workspace = true
keystone-util.workspace = true
