[package]
name = "stateful-module"
edition.workspace = true
rust-version.workspace = true
version = "0.1.0"
authors = [
  "Erik McClure <erikm@fundament.software>",
]
homepage.workspace = true
license.workspace = true

[[bin]]
name = "stateful-module"
path = "main.rs"

[dependencies]
capstone.workspace = true
capstone-futures.workspace = true
capstone-import.workspace = true
capstone-rpc.workspace = true
capstone-macros.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
