[package]
name = "keystone-test-module"
version = "0.1.0"
edition = "2021"
rust-version = "1.60"
authors = ["Erik McClure <erikm@fundament.software>"]
description = """
Core server application for managing internal company infrastructure using couchdb and capability based security.
"""
homepage = "https://github.com/Fundament-Software/keystone"
repository = "https://github.com/Fundament-Software/keystone/tree/master/modules/test"
readme = "README.md"
keywords = [
  "backend",
  "infrastructure",
  "management",
  "enterprise",
  "distributed",
]
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.65"
cap-std = "0.26"
tokio = { version = "1.18", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
log = { version = "0.4", features = ["kv_unstable"] }
async-backtrace.workspace = true

[dev-dependencies]
assert_fs = "1.0"
